# DeepSea

./: .editorconfig  .travis.yml  CMakeLists.txt  deepSea.pc.in  main.c  readme.md
include/: ds_list.c  ds_list.h  ds_stack.h  ds_types.h
library_config/: libdeepSea.pc.in
src/: CMakeLists.txt  ds_list.c  ds_stack.c
tests/: CMakeLists.txt  test_ds_list.c  test_ds_stack.c
